vlib/v/checker/tests/return_optional_of_multiple_results.vv
fn test() ?(&int, &int) {
	return test() ?
}

fn main() {
}
